--- a/projects/marx-editor/src/editor-container/marx-editor.component.less
+++ b/projects/marx-editor/src/editor-container/marx-editor.component.less
@@ -7,28 +7,28 @@
     * {
         transition: all .2s ease-in-out;
     }
+    &:hover,
+        &:focus-within {
+            outline     : none;
+            border-color: #1e5dd3;
+            box-shadow  : 0 0 5px rgba(30, 93, 211, 0.27);
+
+            .editor-tools {
+                box-shadow: 0 0 5px rgba(30, 93, 211, 0.27);
+            }
+        }
 
     .editable-block {
         display      : block;
         outline      : none;
         min-height   : 150px;
         padding      : 25px;
-        border       : 1px solid #f1f1f1;
+        // border       : 1px solid #f1f1f1;
         border-radius: 2px 2px 0 0;
         border-bottom: transparent;
         width        : 100%;
 
-        &:hover,
-        &:focus {
-            // box-shadow: 0 0 0 0;
-            outline     : none;
-            border-color: #1e5dd3;
-            box-shadow  : 0 0 5px rgba(30, 93, 211, 0.27);
-
-            &+.editor-tools {
-                box-shadow: 0 0 5px rgba(30, 93, 211, 0.27);
-            }
-        }
+        
 
         &.top {
             order: 2;
