--- a/projects/marx-editor/src/editor-container/marx-editor.component.less
+++ b/projects/marx-editor/src/editor-container/marx-editor.component.less
@@ -14,7 +14,7 @@
             box-shadow  : 0 0 5px rgba(30, 93, 211, 0.27);
 
             .editor-tools {
-                box-shadow: 0 0 5px rgba(30, 93, 211, 0.27);
+                border-color: #1e5dd3;
             }
         }
 
@@ -35,15 +35,15 @@
             border-top: transparent;
             border-bottom: 1px solid #F1F1F1;
             border-radius: 0 0 2px 2px;
-            &:hover, &:focus {
-                outline     : none;
-                border-color: #1e5dd3;
-                box-shadow  : 0 0 5px rgba(30, 93, 211, 0.27);
+            // &:hover, &:focus {
+            //     outline     : none;
+            //     border-color: #1e5dd3;
+            //     box-shadow  : 0 0 5px rgba(30, 93, 211, 0.27);
 
-                &+.editor-tools {
-                    box-shadow: 0 0 5px rgba(30, 93, 211, 0.27);
-                }
-            }
+            //     &+.editor-tools {
+            //         box-shadow: 0 0 5px rgba(30, 93, 211, 0.27);
+            //     }
+            // }
         }
 
         &.bottom {
