--- a/projects/marx-editor/src/editor-menu/editor-menu.component.less
+++ b/projects/marx-editor/src/editor-menu/editor-menu.component.less
@@ -271,8 +271,8 @@
                                 span {
                                     font-size     : 12px;
                                     color         : #747576;
-                                    // text-transform: capitalize;
                                     margin-left   : 10px;
+                                    text-align: left;
                                 }
                             }
                         }
