--- a/projects/marx-editor/src/editor-container/marx-editor.component.less
+++ b/projects/marx-editor/src/editor-container/marx-editor.component.less
@@ -27,6 +27,8 @@
         border-radius: 2px 2px 0 0;
         border-bottom: transparent;
         width        : 100%;
+        overflow: auto;
+        max-height: 200px;
 
         
 
