--- a/projects/marx-editor/src/editor-menu/editor-menu.component.less
+++ b/projects/marx-editor/src/editor-menu/editor-menu.component.less
@@ -451,4 +451,12 @@
     background-color: chartreuse;
     padding: 10px 10px 10px 10px;
 }
+.popover-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+}
 
